--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   get: 4.3.8
+
+  #content:
+  flutter_quill: ^2.0.9
+
   flutter:
     sdk: flutter
 
