--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,13 @@ dependencies:
   get: 4.3.8
 
   #content:
-  flutter_quill: ^2.0.9
+  html_editor_enhanced: ^2.3.0
 
   flutter:
     sdk: flutter
+
+dependency_overrides:
+  flutter_colorpicker: ^0.6.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -24,7 +27,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  assets:
+    - assets/
+
   fonts:
-    - family: sailec_light
+    - family: Sailec Light
       fonts:
         - asset: fonts/sailec_light.ttf
